--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,7 @@
 
 
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700");
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:600");
 *,
 *:before,
 *:after {
