Added newsfeed.js but needs work

--- a/public/style.css
+++ b/public/style.css
@@ -1872,3 +1872,12 @@ div.newsfeed {
   position: relative;
   z-index: 99999999999999999999999999999999999999999999999999999999999;
 }
+a.newsfeedbtn {
+  background-color: #2980b9;
+  font-weight: bold;
+}
+a.newsfeedbtn:hover {
+  font-size: 25px;
+  background-color: #00f;
+  font-weight: bolder;
+}
