--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,9 @@ padding: 0;
 border: 0;
 outline: 0;
 box-sizing: border-box;
+-webkit-touch-callout: none;
 -webkit-user-select: none;
+ -khtml-user-select: none;
    -moz-user-select: none;
     -ms-user-select: none;
         user-select: none;
@@ -1569,7 +1571,7 @@ div.flex-contatiner {/*
   -webkit-box-align: center;
           align-items: center;
   overflow: hidden;*/
-  margin-top: 410px;
+  margin-top: 360px;
   margin-left: 1220px;
 }
 div.calendar-container {
@@ -1653,22 +1655,21 @@ div.calendar .is-today {
 
 /*****GOOGLE APPS*****/
 div.googleapps {
-  margin-left: 0px;
-  margin-top: 0px;
+  margin-left: 1470px;
+  margin-top: 18px;
   position: relative;
 }
 li.googleapps-dropdown {
-  padding: 20px 40px;
   color: #fff;
-  background: #c06162;
-  background: #34495e;
+  background: #474747;
   position: relative;
   font-size: 18px;
   perspective: 1000px;
   z-index: 99999999999999999999999999999999999999999999999;
+  border-radius: 18px;
 }
 li.googleapps-dropdown:hover {
-  background: #2980b9;
+  background: #282052;
   cursor: pointer;
 }
 li.googleapps-dropdowngrid:hover {
@@ -1681,11 +1682,11 @@ li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngr
 li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-5,
 li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-6,
 li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7,
-li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8,
-li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-9,
-li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-10,
-li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-11 {
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8 {
   display: block;
+  background: #242627;
+  width: 350px;
+  cursor: default;
 }
 li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-1,
 li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-2,
@@ -1694,29 +1695,15 @@ li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row
 li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-5,
 li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-6,
 li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-9,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-10,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-11 {
+li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8 {
   display: none;
   color: #fff;
-  background-color: #34495e;
+  background-color: #242627;
   padding: 10px 20px;
   font-size: 16px;
   opacity: 0;
-}
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-1,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-2,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-3,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-4,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-5,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-6,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-9,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-10,
-li.googleapps-dropdown ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-11 {
-  background-color: #2980b9;
+  width: 350px;
+  cursor: default;
 }
 ul.googleapps-dropdowngrid--animated li.googleapps-dropdowngrid-row-1,
 ul.googleapps-dropdowngrid--animated li.googleapps-dropdowngrid-row-2,
@@ -1725,12 +1712,84 @@ ul.googleapps-dropdowngrid--animated li.googleapps-dropdowngrid-row-4,
 ul.googleapps-dropdowngrid--animated li.googleapps-dropdowngrid-row-5,
 ul.googleapps-dropdowngrid--animated li.googleapps-dropdowngrid-row-6,
 ul.googleapps-dropdowngrid--animated li.googleapps-dropdowngrid-row-7,
-ul.googleapps-dropdowngrid--animated li.googleapps-dropdowngrid-row-8,
-ul.googleapps-dropdowngrid--animated li.googleapps-dropdowngrid-row-9,
-ul.googleapps-dropdowngrid--animated li.googleapps-dropdowngrid-row-10,
-ul.googleapps-dropdowngrid--animated li.googleapps-dropdowngrid-row-11 {
+ul.googleapps-dropdowngrid--animated li.googleapps-dropdowngrid-row-8 {
   display: block;
   opacity: 1;
+  width: 350px;
+  cursor: default;
+}
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-1 li.googleapps-dropdowngrid-row-item-1:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-1 li.googleapps-dropdowngrid-row-item-2:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-1 li.googleapps-dropdowngrid-row-item-3:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-1 li.googleapps-dropdowngrid-row-item-4:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-2 li.googleapps-dropdowngrid-row-item-1:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-2 li.googleapps-dropdowngrid-row-item-2:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-2 li.googleapps-dropdowngrid-row-item-3:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-2 li.googleapps-dropdowngrid-row-item-4:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-3 li.googleapps-dropdowngrid-row-item-1:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-3 li.googleapps-dropdowngrid-row-item-2:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-3 li.googleapps-dropdowngrid-row-item-3:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-3 li.googleapps-dropdowngrid-row-item-4:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-4 li.googleapps-dropdowngrid-row-item-1:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-4 li.googleapps-dropdowngrid-row-item-2:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-4 li.googleapps-dropdowngrid-row-item-3:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-4 li.googleapps-dropdowngrid-row-item-4:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-5 li.googleapps-dropdowngrid-row-item-1:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-5 li.googleapps-dropdowngrid-row-item-2:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-5 li.googleapps-dropdowngrid-row-item-3:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-5 li.googleapps-dropdowngrid-row-item-4:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-6 li.googleapps-dropdowngrid-row-item-1:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-6 li.googleapps-dropdowngrid-row-item-2:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-6 li.googleapps-dropdowngrid-row-item-3:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-6 li.googleapps-dropdowngrid-row-item-4:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7 li.googleapps-dropdowngrid-row-item-1:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7 li.googleapps-dropdowngrid-row-item-2:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7 li.googleapps-dropdowngrid-row-item-3:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7 li.googleapps-dropdowngrid-row-item-4:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8 li.googleapps-dropdowngrid-row-item-1:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8 li.googleapps-dropdowngrid-row-item-2:hover,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8 li.googleapps-dropdowngrid-row-item-3:hover {
+  background-color: #282052;
+  border-radius: 10px;
+}
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-1 li.googleapps-dropdowngrid-row-item-1,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-1 li.googleapps-dropdowngrid-row-item-2,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-1 li.googleapps-dropdowngrid-row-item-3,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-1 li.googleapps-dropdowngrid-row-item-4,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-2 li.googleapps-dropdowngrid-row-item-1,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-2 li.googleapps-dropdowngrid-row-item-2,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-2 li.googleapps-dropdowngrid-row-item-3,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-2 li.googleapps-dropdowngrid-row-item-4,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-3 li.googleapps-dropdowngrid-row-item-1,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-3 li.googleapps-dropdowngrid-row-item-2,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-3 li.googleapps-dropdowngrid-row-item-3,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-3 li.googleapps-dropdowngrid-row-item-4,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-4 li.googleapps-dropdowngrid-row-item-1,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-4 li.googleapps-dropdowngrid-row-item-2,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-4 li.googleapps-dropdowngrid-row-item-3,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-4 li.googleapps-dropdowngrid-row-item-4,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-5 li.googleapps-dropdowngrid-row-item-1,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-5 li.googleapps-dropdowngrid-row-item-2,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-5 li.googleapps-dropdowngrid-row-item-3,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-5 li.googleapps-dropdowngrid-row-item-4,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-6 li.googleapps-dropdowngrid-row-item-1,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-6 li.googleapps-dropdowngrid-row-item-2,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-6 li.googleapps-dropdowngrid-row-item-3,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-6 li.googleapps-dropdowngrid-row-item-4,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7 li.googleapps-dropdowngrid-row-item-1,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7 li.googleapps-dropdowngrid-row-item-2,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7 li.googleapps-dropdowngrid-row-item-3,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7 li.googleapps-dropdowngrid-row-item-4,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8 li.googleapps-dropdowngrid-row-item-1,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8 li.googleapps-dropdowngrid-row-item-2,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8 li.googleapps-dropdowngrid-row-item-3,
+li.googleapps-dropdown:hover ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8 li.googleapps-dropdowngrid-row-item-4 {
+  width: 70px;
+  height: 50px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 ul.googleapps-dropdowngrid {
   position: absolute;
@@ -1741,12 +1800,13 @@ ul.googleapps-dropdowngrid {
   z-index: -1;
 }
 nav.googleapps-nav {
-  width: 20%;
+  width: 36px;
 }
 ul.googleapps-dropdowngrid {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-left: -290px;
 }
 ul.googleapps-dropdowngrid-row-items {
   display: flex;
@@ -1790,18 +1850,6 @@ ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-7 {
 ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-8 {
   transform-origin: top center;
   animation: rotateZ 300ms 480ms ease-in-out forwards;
-}
-ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-9 {
-  transform-origin: top center;
-  animation: rotateZ 300ms 520ms ease-in-out forwards;
-}
-ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-10 {
-  transform-origin: top center;
-  animation: rotateZ 300ms 580ms ease-in-out forwards;
-}
-ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-11 {
-  transform-origin: top center;
-  animation: rotateZ 300ms 660ms ease-in-out forwards;
 }
 @-moz-keyframes rotateZ {
   0% {
@@ -1858,12 +1906,29 @@ ul.googleapps-dropdowngrid li.googleapps-dropdowngrid-row-11 {
 ul.googleapps-menu, ul.googleapps-dropdowngrid, ul.googleapps-dropdowngrid-row-items {
   list-style-type:none;
 }
-
+img.google-list-items {
+  width: 36px;
+}
+img.google-list-item {
+  width: 30px;
+  height: 30px;
+}
+a.google-list-item {
+  text-decoration: none;
+  color: white;
+  font-size: 10px;
+}
+span.google-list-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 /*****WEATHER MONITOR*****/
 div.weathermonitor {
   width: 250px;
   margin-left: 25px;
-  margin-top: -645px;
+  margin-top: -340px;
   z-index: 99999999999999999999999999999999999999999999999999999999999;
 }
 
