--- a/public/style.css
+++ b/public/style.css
@@ -1657,7 +1657,8 @@ div.calendar .is-today {
 div.googleapps {
   margin-left: 1470px;
   margin-top: 18px;
-  position: relative;
+  position: absolute;
+  z-index: 99999999999;
 }
 li.googleapps-dropdown {
   color: #fff;
@@ -1665,7 +1666,6 @@ li.googleapps-dropdown {
   position: relative;
   font-size: 18px;
   perspective: 1000px;
-  z-index: 99999999999999999999999999999999999999999999999;
   border-radius: 18px;
 }
 li.googleapps-dropdown:hover {
@@ -1929,7 +1929,6 @@ div.weathermonitor {
   width: 250px;
   margin-left: 25px;
   margin-top: -340px;
-  z-index: 99999999999999999999999999999999999999999999999999999999999;
 }
 
 /*****NEWS FEED*****//*
@@ -1946,3 +1945,51 @@ a.newsfeedbtn:hover {
   background-color: #00f;
   font-weight: bolder;
 }*/
+/*****SHORTCUTS*****/
+div.shortcuts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 60px;
+  position: absolute;
+  transform: translateX(11.5%);
+  z-index: 999999;
+}
+ul.shortcuts-outer {
+  list-style-type:none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 25px 15px 25px 15px;
+  border-radius: 10px;
+  border: 2px solid rgb(163, 154, 154);
+  width: 1250px;
+}
+li.shortcuts-inner {
+  padding: 15px;
+  border-radius: 6px;
+  border: 2px solid rgb(163, 154, 154);
+  transition: 0.3s;
+}
+li.shortcuts-inner:hover {
+  border: 2px solid black;
+  background-color: rgb(163, 154, 154);
+}
+span.shortcut-inner-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+a.shortcut-inner-item {
+  text-decoration: none;
+  color: white;
+  font-size: 12px;
+}
+a.shortcut-inner-item:hover {
+  color: #00f;
+}
+img.shortcut-inner-item {
+  width: 70px;
+}
